cluster-components/istio/grafana-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-istio
  namespace: istio-system
spec:
  rules:
  - host: grafana-istio.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
---
