cluster-components/istio/kiali-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-istio
  namespace: istio-system
spec:
  rules:
  - host: kiali-istio.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
---
