cluster-components/istio/prometheus-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-istio
  namespace: istio-system
spec:
  rules:
  - host: prometheus-istio.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
---
